2048: добавила undo; добавила подсщет и отображения максимально достигнутой цифры; поправила ошибку частой вибрации Китайские шашки: поправила ошибку с запиранием чужой фишки на своем целевом поле; Тетрис: добавила кнопку быстрого спуска; убрала быстрый спуск при свайпе вниз; добавила код для контроля свайпа (закомитила) Змейка: добавила возможность менять режимы много/одна еда и можно/нельзя проходить сквозь стены; ускорила реакцию на свайпы Везде: поменяла цветовую гамму; обновила локализацию; добавила новые параметры в настройки на будущее

--- a/Assets/Resources/Localization/CombyGames.csv
+++ b/Assets/Resources/Localization/CombyGames.csv
@@ -16,7 +16,10 @@ Tetris.score,Score,Очки
 Tetris.record,Record,Рекорд
 2048.gameover,Game Over!,Конец игры!
 2048.again,Try Again!,Попробуй еще!
+2048.maximum,Maximum,Максимум
 Сheckers.warning,Include at least two players!,Включите минимум двух игроков!
-Сheckers.steps,Steps,Круги
+Сheckers.steps,Moves,Ходы
 Сheckers.robot,Robot,Робот
 Сheckers.player,Player,Игрок
+Snake.manyfood,Lots of food,Много еды
+Snake.movewalls,Move through walls,Двигаться сквозь стены
