Китайские шашки: поправила баг при нажатии заново кнопка Undo не сбрасывала активность; теперь делаю Undo не только когда проходит круг, но и когда ходит не робот; поправила ошибку при сбросе скорости у фишек после Заново 2048: поправила ошибку не свайпа; поправила ошибку неправильного расчется счета поле Undo Везде: добавила тему Auto; поменяла цвет финишной панельки; поменяла картинку выделения

--- a/Assets/Resources/Localization/CombyGames.csv
+++ b/Assets/Resources/Localization/CombyGames.csv
@@ -8,6 +8,7 @@ Settings.dark,Dark,Темная
 Settings.language,Language,Язык
 Settings.english,English,Английский
 Settings.russian,Russian,Русский
+Settings.automatically,Automatically,Автоматически
 Pause.resume,Resume,Продолжить
 Pause.again,Again,Заново
 Pause.home,Home,Домой
