Змейка: добавила настройку скорости и ускорение Тетрис: добавила настройку скорости и ускорение; сделала ускорение движения фигуры вправо/влево в зависимости от длины свайпа Китайские шашки: поменяла цвет финишной панели Везде: заменила иконку; показываю панель паузы если игрок закрыл приложение

--- a/Assets/Resources/Localization/CombyGames.csv
+++ b/Assets/Resources/Localization/CombyGames.csv
@@ -24,3 +24,5 @@ Tetris.record,Record,Рекорд
 Сheckers.player,Player,Игрок
 Snake.manyfood,Lots of food,Много еды
 Snake.movewalls,Move through walls,Двигаться сквозь стены
+Snake.speed,Speed,Скорость
+Snake.acceleration,Acceleration,Ускорение
