Линии48: добавила новую игру

--- a/Assets/Resources/Localization/CombyGames.csv
+++ b/Assets/Resources/Localization/CombyGames.csv
@@ -2,6 +2,7 @@ Key,English,Russian
 Menu.tetris,Tetris,Тетрис
 Menu.snake,Snake,Змейка
 Menu.checkers,Chinese Checkers,Китайские шашки
+Menu.lines98,Lines 98,Линии 98
 Settings.theme,Theme,Тема
 Settings.light,Light,Светлая
 Settings.dark,Dark,Темная
