--- a/Assets/Resources/Localization/CombyGames.csv
+++ b/Assets/Resources/Localization/CombyGames.csv
@@ -1,9 +1,10 @@
 Key,English,Russian
-Menu.tetris,Tetris,Тетрис
-Menu.snake,Snake,Змейка
-Menu.checkers,Chinese Checkers,Китайские шашки
-Menu.lines98,Lines 98,Линии 98
-Menu.blocks,Blocks,Блоки
+Menu.tetris,TETRIS,ТЕТРИС
+Menu.snake,SNAKE,ЗМЕЙКА
+Menu.checkers,CHINESE CHECKERS,КИТАЙСКИЕ ШАШКИ
+Menu.lines98,LINES 98,ЛИНИИ 98
+Menu.blocks,BLOCKS,БЛОКИ
+Menu.settings,Settings,Настройки
 Settings.theme,Theme,Тема
 Settings.light,Light,Светлая
 Settings.dark,Dark,Темная
