Блоки: добавила анимацию начисления очков при уничтожении Тетрис: добавила анимацию начисления очков при уничтожении 2048: добавила анимацию при появлении плитки; добавила анимацию при соединении плиток Везде: отключила звук Success; обновила локализацию; скрыла FPS; доработала внешне меню змейки и тетриса

--- a/Assets/Resources/Localization/CombyGames.csv
+++ b/Assets/Resources/Localization/CombyGames.csv
@@ -1,6 +1,8 @@
 Key,English,Russian
 Menu.tetris,TETRIS,ТЕТРИС
+Menu.tetris1,Tetris,Тетрис
 Menu.snake,SNAKE,ЗМЕЙКА
+Menu.snake1,Snake,Змейка
 Menu.checkers,CHINESE CHECKERS,КИТАЙСКИЕ ШАШКИ
 Menu.lines98,LINES 98,ЛИНИИ 98
 Menu.blocks,BLOCKS,БЛОКИ
