--- a/Assets/Resources/Localization/CombyGames.csv
+++ b/Assets/Resources/Localization/CombyGames.csv
@@ -33,3 +33,6 @@ Snake.manyfood,Lots of food,Много еды
 Snake.movewalls,Move through walls,Двигаться сквозь стены
 Snake.speed,Speed,Скорость
 Snake.acceleration,Acceleration,Ускорение
+Blocks.repeat,Repeat,Повторить
+Blocks.edufin,Training completed!,Обучение пройдено!
+Blocks.edutext,Collect lines and squares!,Собирай линии и квадраты!
