Китайские шашки: сделала сокрытие кнопок prev/next в обучении; Тетрис: поправила неверный тест в обучении Блоки: добавила в обучение кнопку смены фигур 2048: сделала отложенное окончание обучения, чтобы не срабатывал тач Везде: поработала с цветом UI; добавила кнопу поддержки, оценить, политика конфиденциальности, версия, удалить рекламу, восстановить покупку; поправила обучения; добавила плашку на место банерной рекламы (для разработки); обновила локализацию; добавила иконки для показа "за рекламу"; обновила достижения и таблицу лидеров

--- a/Assets/Resources/Localization/CombyGames.csv
+++ b/Assets/Resources/Localization/CombyGames.csv
@@ -14,6 +14,12 @@ Settings.language,Language,Язык
 Settings.english,English,Английский
 Settings.russian,Russian,Русский
 Settings.automatically,Automatically,Автоматически
+Settings.ads,Advertising,Реклама
+Settings.removeads,Remove ADS,Удалить рекламу
+Settings.restoreinapp,Restore In-App,Восстановить
+Settings.about,About the game,Об игре
+Settings.privacypolicy,Privacy Policy,Политика конфиденциальности
+Settings.support,Support,Поддержка
 Pause.resume,Resume,Продолжить
 Pause.again,Again,Заново
 Pause.home,Home,Домой
@@ -54,4 +60,5 @@ Edu.hint,Hint button,Кнопка подсказки
 Edu.undo,Undo button,Кнопка шаг назад
 Edu.settings,Change additional settings,Меняй дополнительные настройки
 Edu.speed,Speed ​​button,Кнопка скорости
-Edu.tap,Click to continue,"Нажми, чтобы продолжить"
+Edu.tap,Click on the screen to continue,"Нажми на экран, чтобы продолжить"
+Edu.change,Button to change shapes,Кнопка смены фигур
