Блоки: обработала показ рекламы за награду; сделала так, чтобы у игрока было 3 бесплатные подсказки, а потом только за рекламу, на следующий день опять 3 бесплатные подсказки; Везде: обработала показ баннера; обработала показ интерстициальной рекламы после 2 или 3 пройгрыша и минимум через 2-2.5 минуты; поправила UI чтобы он не перекрывался баннером на мобиьном устройстве в вертикальной ориентации

--- a/Assets/Resources/Localization/CombyGames.csv
+++ b/Assets/Resources/Localization/CombyGames.csv
@@ -16,6 +16,7 @@ Settings.russian,Russian,Русский
 Settings.automatically,Automatically,Автоматически
 Settings.ads,Advertising,Реклама
 Settings.removeads,Remove ADS,Удалить рекламу
+Settings.addads,Add ADS,Добавить рекламу
 Settings.restoreinapp,Restore In-App,Восстановить
 Settings.about,About the game,Об игре
 Settings.privacypolicy,Privacy Policy,Политика конфиденциальности
