2048: поправила баг с незакрывающимся окном конца игры Линии 98: переделала проверку конца игры на случай когда шарики уничтожаются в самом конце сами или чтобы был конец игры только когда нет возможности сделать движение Везде: добавила второй шанс после пройгрышей; убрала адаптивную иконку (не правильно отображалась на андроиде); поменяла цвет бирюзового шарика; обновила локализацию

--- a/Assets/Resources/Localization/CombyGames.csv
+++ b/Assets/Resources/Localization/CombyGames.csv
@@ -63,3 +63,8 @@ Edu.settings,Change additional settings,Меняй дополнительные 
 Edu.speed,Speed ​​button,Кнопка скорости
 Edu.tap,Click on the screen to continue,"Нажми на экран, чтобы продолжить"
 Edu.change,Button to change shapes,Кнопка смены фигур
+Chance.skip,Skip,Пропустить
+Chance.title,Second chance,Второй шанс
+Chance.watch,Watch,Смотреть
+Chance.continue,Continue,Продолжить
+Chance.ball,Select a ball to remove,Выбери шарик для удаления
